--- a/package.json
+++ b/package.json
@@ -1,21 +1,42 @@
 {
-  "name": "owl",
+  "name": "chef",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3030",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.1.1",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
-    "next": "13.1.1",
+    "@hookform/resolvers": "^2.9.9",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "clsx": "^1.2.1",
+    "cookies-next": "^2.1.1",
+    "moment": "^2.29.4",
+    "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.37.0",
+    "react-moment": "^1.1.2",
+    "swr": "^1.3.0",
+    "tailwind-merge": "^1.6.1"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^6.4.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@types/node": "18.7.23",
+    "@types/react": "18.0.21",
+    "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.12",
+    "eslint": "8.24.0",
+    "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.17",
+    "postcss-import": "^15.0.0",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "tailwindcss": "^3.1.8",
+    "typescript": "4.8.4"
   }
 }
