--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,20 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "baseUrl": ".",
+    "paths": {
+      "@src/*": ["./src/*"],
+      "@components/*": ["./src/components/*"],
+      "@api": ["./src/api/index.ts"],
+      "@utils/*": ["src/utils/*"],
+      "@constants": ["./src/constants/index.ts"],
+      "@types": ["./src/types/index.ts"],
+      "@public/*": ["public/*"],
+      "@icons/*": ["public/icons/*"],
+      "@images/*": ["public/images/*"],
+      "@fonts/*": ["public/fonts/*"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
